[workspace]
members = [
    "client",
    "server",
    "protocol"
]
resolver = "3"

[workspace.dependencies]
tokio = {version = "1", features = ["io-util", "rt-multi-thread", "macros", "net", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
bincode = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
