[workspace]
members = [
    "client",
    "server",
    "protocol"
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
bincode = { git = "https://github.com/Dan0xE/bincode-fork.git" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "registry"] }

[profile.release-opt]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rpath = false
