[package]
name = "broadcast_client"
version = "0.1.0"
edition = "2024"

[dependencies]
broadcast_protocol = { path = "../protocol" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
crossterm = "0.29"
termina = { version = "0.1", features = ["event-stream"] }
terminput = "0.5"
