[package]
name = "broadcast_client"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug-logging"]
debug-logging = ["tracing-appender"]

[dependencies]
broadcast_protocol = { path = "../protocol" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { version = "0.2", optional = true }
termina = { version = "0.1", features = ["event-stream"] }
terminput = "0.5"
terminput-termina = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
