[package]
name = "broadcast_server"
version = "0.1.0"
edition = "2024"

[dependencies]
broadcast_protocol = { path = "../protocol" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = "0.9"
anyhow = "1.0.100"
